--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 *.DS_Store
 materials/Day5/data/Lab3/
 materials/Day4/data/Lab4/
+materials/Day5/data/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
