--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ materials/Day5/data/Lab3/
 materials/Day4/data/Lab4/
 materials/Day5/data/
 *.tif
-
+*cache*
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
