day 8 almost done

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ materials/Day5/data/Lab3/
 materials/Day4/data/Lab4/
 materials/Day5/data/
 materials/Day7/data/
+materials/Day8/data/
+
 *.tif
 *cache*
 
