--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
+# Ignore
 *.DS_Store
-materials/Day5/data/Lab3/
-materials/Day4/data/Lab4/
-materials/Day5/data/
-materials/Day7/data/
-materials/Day8/data/
-
 *.tif
 *cache*
+
+# Lab Keys
+/Users/t61d992/Github/GPHY-491-591/labs/keys
+
+# Big files
+/ylectures/data/GHS-Pop/*
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
